<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:focusableInTouchMode="true"
    tools:context=".activity.LoginActivity">

    <!-- ScrollView contenant le formulaire -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearBottom"
        android:fillViewport="true">

        <!-- LinearLayout principal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <!-- Logo -->
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                android:background="@drawable/rounded_lv"
                android:adjustViewBounds="true"
                android:layout_marginBottom="30dp"/>

            <!-- Zone des identifiants -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <!-- Email -->
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/email_ou_identifiant"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="#78909C"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="10dp"/>

                <!-- Mot de passe -->
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColorHint="#78909C"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Zone des boutons qui colle aux bords de l'écran -->
    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@drawable/rounded_top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp">

        <!-- Mot de passe oublié -->
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oubli_r_cup_rez_le_ici"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"/>

        <!-- Bouton Se connecter -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/se_connecter"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="12dp"
            style="@style/ButtonStyle"
            android:layout_marginBottom="16dp"/>

        <!-- Texte "OU" -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ou"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"/>

        <!-- Bouton S'inscrire -->
        <Button
            android:id="@+id/btnSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/s_inscrire"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="12dp"
            style="@style/ButtonStyle"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
